Fixed Spacing Issue & Enhanced Font

--- a/docs/hfestP/style.css
+++ b/docs/hfestP/style.css
@@ -3,9 +3,17 @@ body {
     max-width: 100%;
 }
 
+@import url('https://fonts.googleapis.com/css2?family=Atkinson+Hyperlegible:wght@700&display=swap');
+
 @font-face {
     font-family: "Baskerville-old-face";
     src: url("/verify24/assests/fonts/BASKVILL.ttf") format("truetype");
+}
+
+#name-element {
+    font-size: 62.0px;
+    font-family: 'Atkinson Hyperlegible', sans-serif;
+    font-weight: 700;
 }
 
 .baskvile {
@@ -22,6 +30,8 @@ body {
                         
 #name-element {
     font-size: 62.0px;
+    font-family: 'Atkinson Hyperlegible', sans-serif;
+    font-weight: 700;
 }
 
 .header {
@@ -53,4 +63,12 @@ canvas {
     max-width: 250.0px;
     height: auto;
     display: block;
+}
+
+/* Limit certificate SVG height to viewport to avoid scrolling */
+svg#certificate {
+    max-height: 80vh;
+    width: auto;
+    display: block;
+    margin: 0 auto;
 }
